# CMake-Template

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  ctl.nu
app/: CMakeLists.txt  main.cpp
cmake/: ClangTidy.cmake  Docs.cmake  LTO.cmake  Sanitizer.cmake  Warnings.cmake
config/: CMakeLists.txt  config.hpp.in
docs/: Doxyfile
test/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt
